Fix tiny gap in code snippets As done in Kimeiga/bahunya#8

--- a/css/main.css
+++ b/css/main.css
@@ -1183,6 +1183,9 @@ pre[class*="language-"] {
   -ms-hyphens: none;
   hyphens: none;
 }
+code[class*="language-"] {
+  padding: 0;
+}
 pre[class*="language-"] {
   padding: 1em;
   margin: 0.5em 0;
